[tool.pdm]
package-type = "application"

[project]
name = "CodeChallenge"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pingrunhuang", email = "pingrunhuang@gmail.com"},
    {name = "FrankHuang", email = ""},
]
dependencies = [
    "ipython>=8.13.1",
    "pandas>=2.1.4",
    "pyarrow>=11.0.0",
    "parquet>=1.3.1",
    "huey>=2.4.5",
    "numpy>=1.24.3",
    "click>=8.1.7",
]
requires-python = "==3.12.*"
license = {text = "MIT"}
readme = "README.md"

[tool.pdm.scripts]
leetcode = "src/main.py --module-name=leetcode.1"
